<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lolistat</string>
	
	<!-- Settings -->
	<string name="global">Global (Can be overridden)</string>
	<string name="global_short">Global</string>
	<string name="search">Search</string>
	<string name="enabled">Enabled</string>
	<string name="tint_navigation">Tint Navigation Bar</string>
	<string name="tint_icons">Tint Notification Icons</string>
	<string name="custom_color">Custom status bar color</string>
	<string name="about">About</string>
	
	<!-- About -->
	<string name="developer">Developer</string>
	<string name="developer_sum">Peter Cai (@PeterCxy)</string>
	<string name="icon">Icon</string>
	<string name="icon_sum">The icon of this app is from Android Open Source Project licensed under Apache License 2.0</string>
	<string name="version">Version</string>
	<string name="source_code">Source Code</string>
	<string name="source_code_sum">https://github.com/PeterCxy/Lolistat</string>
	<string name="license">License</string>
	<string name="license_sum">Source code licensed under GNU GPLv3.\nYou can get a copy of the license via the "Source Code" link</string>
	<string name="donation">Donate</string>
	<string name="donation_sum">If you like this module and would like to support the development of this module and other modules written by me, you could donate via\nPaypal: xqsx43cxy@126.com\nAlipay: xqsx43cxy@gmail.com\nClick here to donate directly via Paypal\'s donation link</string>
	<string name="email">Email</string>
	<string name="email_sum">peter@typeblog.net\nPlease do not e-mail to the addresses in "Donate" section.</string>
	
	<!-- Messages -->
	<string name="plz_wait">Please wait...</string>
	<string name="save">Save</string>
	<string name="reset">Reset</string>
	<string name="reset_confirm">Confirm reset?</string>

</resources>
